--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Email-Dadi</title>
 </head>
 <body>
+    <section id="number-game">
+        <div id="winner"></div>
+    </section>
     <script src="js/script.js"></script>
 </body>
 </html>
