--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <section id="number-game">
+        <div id="computer-number"></div> 
+        <div id="player-number"></div>
         <div id="winner"></div>
     </section>
     <script src="js/script.js"></script>
